--- a/_posts/2018-7-10-Links.md
+++ b/_posts/2018-7-10-Links.md
@@ -6,8 +6,8 @@ title: HMS related links
 
 ## HMS tools Documentation links
 
-* [Hive Metastore Tools Public API](akolb1.github.io/hclient)
-* [Hive Metastore V2 proposed API](hmsv2api)
+* [Hive Metastore Tools Public API](https://akolb1.github.io/hclient)
+* [Hive Metastore V2 proposed API](https://akolb1.github.io/hmsv2client)
 * [HMS cli written in Go langiage](https://github.com/akolb1/gometastore/blob/master/hmstool/doc/hmstool.md)
 * [Collection of GO tools for Hive Metastore](https://github.com/akolb1/gometastore)
 
