--- a/_posts/2018-7-10-Links.md
+++ b/_posts/2018-7-10-Links.md
@@ -7,7 +7,7 @@ title: HMS related links
 ## HMS tools Documentation links
 
 * [Hive Metastore Tools Public API](https://akolb1.github.io/hclient)
-* [Hive Metastore V2 proposed API](https://akolb1.github.io/hmsv2client)
+* [Hive Metastore V2 proposed API](https://akolb1.github.io/hmsv2api)
 * [HMS cli written in Go langiage](https://github.com/akolb1/gometastore/blob/master/hmstool/doc/hmstool.md)
 * [Collection of GO tools for Hive Metastore](https://github.com/akolb1/gometastore)
 
